--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass scss/main.scss css/main.css --output-style compressed -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +18,7 @@
   },
   "homepage": "https://github.com/LetyMind/LetyProject#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "node-sass": "^5.0.0"
   }
 }
